# fuel-counter

./: Forc.toml  Makefile
contracts/counter/: Forc.toml
contracts/counter/src/: main.sw
indexers/counter_indexer/: Cargo.toml  counter_indexer.manifest.yaml
indexers/counter_indexer/schema/: counter_indexer.schema.graphql
indexers/counter_indexer/src/: lib.rs
libraries/src/: interface.sw
scripts/incr_script/: Forc.toml
scripts/incr_script/src/: main.sw
