[package]
name = "counter_indexer"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { version = "0.15.1", default-features = false }
fuel-indexer-plugin = { version = "0.15.1" }
fuel-indexer-schema = { version = "0.15.1", default-features = false }
fuels = { version = "0.40", default-features = false }
serde = { version = "*", default-features = false, features = ["derive"] }
